# pymdu

./: .gitattributes  .gitignore  404.html  AUTHORS.md  DEM.tif  Demo_PyMDU_Atelier.ipynb  Dockerfile  README.md  cdsm.tif  codemeta.json  docker-compose.yml  environment.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mask.shp  mask.shx  mkdocs.yml  notebook4windows.ipynb  objects.inv  pyproject.toml  sitemap.xml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
demo_data_inputs/: index.html
docker/: docker-entrypoint.sh  jupyter_server_config.py
docs/: .htaccess  documentation.md  index.md  installation.md  references.md
docs/hooks/: french.py
docs/overrides/partials/: footer.html
documentation/: index.html
example/: ARBRES.dbf  ARBRES.idx  ARBRES.shp  ARBRES.shx  ASPECT.tif  BATIMENT_PREAU.idx  BATIMENT_PREAU.shp  BATIMENT_PREAU.shx  BATIMENT_R1.idx  BATIMENT_R1.shp  BATIMENT_R1.shx  BATIMENT_RDC SOUSTRAIT.dbf  BATIMENT_RDC SOUSTRAIT.idx  BATIMENT_RDC SOUSTRAIT.prj  BATIMENT_RDC SOUSTRAIT.shp  BATIMENT_RDC SOUSTRAIT.shx  BATIMENT_RDC.dbf  BATIMENT_RDC.idx  BATIMENT_RDC.shp  BATIMENT_RDC.shx  CDSM.tif  DEM.tif  DSM.tif  FRA_AC_La.Rochelle.Intl.AP.073160_TMYx.2004-2018.txt  HEIGHT.tif  LaRochelle_historical_IPSL_bc_type_list_UMEP.txt  OCCUPATION SOL_Circulation pietonne.dbf  OCCUPATION SOL_Circulation pietonne.idx  OCCUPATION SOL_Circulation pietonne.shp  OCCUPATION SOL_Circulation pietonne.shx  OCCUPATION SOL_Circulation vehicule.idx  OCCUPATION SOL_Circulation vehicule.shp  OCCUPATION SOL_Circulation vehicule.shx  OCCUPATION SOL_Mare.idx  OCCUPATION SOL_Mare.shp  OCCUPATION SOL_Mare.shx  OCCUPATION SOL_Noue paysagere.idx  OCCUPATION SOL_Noue paysagere.shp  OCCUPATION SOL_Noue paysagere.shx  OCCUPATION SOL_Stationnement vehicule.idx  (+60 more)
hooks/: copy_dir.py
installation/: index.html
overrides/: main.html
plugins/: MyPlugin.py
pymdu/: GeoCore.py  __init__.py  _typing.py  _version.py
pymdu/collect/: GlobalVariables.py  __init__.py
pymdu/collect/geoclimate/: GeoclimateCollect.py  __init__.py  my_first_config_file_osm.json  toGo.json
pymdu/collect/ign/: IgnCollect.py  Ressources_de_services_web_2022-05-20.csv  Tableau suivi services-web 04-03-2024.csv  Tableau suivi services-web 23-01-2024.csv  Tableau suivi services-web 26-02-2024.csv  Tableau-suivi-services-web-04-04-2025.csv  Tableau-suivi-services-web-11-10-2024.csv  __init__.py
pymdu/collect/osm/: OsmCollect.py  __init__.py
pymdu/commons/: BasicFunctions.py  HeatStressIndicators.py
pymdu/demos/: Atlantech.py  GeoDataFrameDemos.py  Technoforum.py  VilleneuveLesSalines.py  __init__.py
pymdu/diagnostic/: Diagnostic.py
pymdu/geometric/: BlocIndicators.py  Building.py  Cadastre.py  Cosia.py  Dem.py  DetectionUrbanTypes.py  Dpe.py  DsmGenerator.py  Dxf2Shp.py  Iris.py  Isochrone.py  IsochroneIGN.py  LandCover.py  Lcz.py  Pedestrian.py  Rnb.py  Road.py  SkyFactor.py  TreeGenerator.py  UrockFiles.py  Vegetation.py  Water.py  __init__.py
pymdu/image/: Lidar.py  __init__.py  build_win.ps1  compile.sh  compile_linux.sh  geotiff.py  lib.cpp  rasterize.cp311-win_amd64.pyd
pymdu/meteo/: EPWConverter.py  FRA_AC_La.Rochelle.073150_TMYx.2004-2018.txt  LaRochelle_historical_IPSL_bc_type.epw  LaRochelle_historical_IPSL_bc_type_UMEP.txt  LaRochelle_historical_IPSL_bc_type_list_UMEP.txt  LaRochelle_rcp85_IPSL_bc_type.epw  LaRochelle_rcp85_IPSL_bc_type_UMEP.txt  LaRochelle_rcp85_IPSL_bc_type_list_UMEP.txt  Meteo.py  PositionStations.pickle  __init__.py  base_weather.txt
pymdu/physics/: __init__.py
pymdu/physics/aeraulic/: WindCalculation.py  WindRose.py  __init__.py  temp.ipynb  wind_list.csv  windrose_calculation.csv
pymdu/physics/aeraulic/uRockle/: CalculatesIndicators.py  DataUtil.py  GlobalVariables.py  H2gisConnection.py  InitWindField.py  MainCalculation.py  Obstacles.py  WindSolver.py  Zones.py  __init__.py  loadData.py  saveData.py
pymdu/physics/comfort/: Givoni.py  IndicatorsComfort.py  Utci.py  Utci_old.py  my_example.csv  utils.py
pymdu/physics/solar/: AllYearShadowCalculation.py  DailyShading.py  SVFCalculation.py  ShadowCalculation.py  ShadowDetailed.py  ShadowGenerator.py  ShadowingFunctions.py  UtilitiesSolar.py  WallAlgoritms.py  WallAspectWorker.py  WallHeightAspect.py  __init__.py
pymdu/physics/solar/solweig/: PET_calculations.py  Solweig.py  SolweigWorker.py  UTCI_calculations.py  WriteMetadataSOLWEIG.py
pymdu/physics/thermal/: TemperatureCalculation.py  __init__.py  param_uwg.xlsx
pymdu/physics/thermal/uwg/: BEMDef.py  RSMDef.py  UBLDef.py  UCMDef.py  __init__.py  building.py  element.py  forcing.py  infracalcs.py  material.py  param.py  psychrometrics.py  readDOE.py  schdef.py  simparam.py  solarcalcs.py  urbflux.py  utilities.py  uwg.py  weather.py
pymdu/physics/umep/: DsmModelGenerator.py  HeightAspectModelGenerator.py  PrepareUmep.py  SVFModelGenerator.py  Solweig.py  SurfaceModelGenerator.py  UmepCore.py  Urock.py
pymdu/physics/umep/scripts/: Solweig.py  SurfaceModelGenerator.py  (+1 more)
pymdu/plotting/: __init__.py  plotting.py
pymdu/pyqgis/: QGisCore.py  QGisLayer.py  QGisProject.py  QGisStyle.py  project.qgs  project.qgs~  qml_file.qml  raster.qml
references/: index.html
scripts/: build_rasterize_lidar.py
search/: search_index.json
stylesheets/: extra.css
(+62 files in other folders)
